--- a/formulario.html
+++ b/formulario.html
@@ -14,7 +14,7 @@
                 <label>Nombre De Usuario</label>
                 <input Type="text" />
                 <label>
-                    Contraseña
+                    Con
                 </label>
                 <input type="password"/>
                 <input type="submit"/>
