--- a/formulario.html
+++ b/formulario.html
@@ -9,7 +9,7 @@
         <h2>
             Iniciar Sesion
         </h2>
-            <img src="IMG/descarga.png" height="150"/> <img src="IMG/html.png" height="160"/>
+            <img src="IMG/descarga.png" height="150"/> <img src="IMG/html.png" heigh="160"/>
             <form>
                 <label>Nombre De Usuario</label>
                 <input Type="text" />
